<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) Open Application Platform Authors
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>pom</packaging>
    <groupId>oap</groupId>
    <artifactId>oap</artifactId>
    <version>${revision}</version>

    <name>oap</name>

    <prerequisites>
        <maven>3.5.0</maven>
    </prerequisites>

    <modules>
        <module>oap-stdlib</module>
<!--        @TODO create separate maven for java 8-->
<!--        <module>oap-stdlib-java8</module>-->
        <module>oap-application-spring</module>
        <module>oap-alert-slack</module>
        <module>oap-zabbix</module>
        <module>maven</module>
    </modules>

    <repositories>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>oap</id>
            <url>https://mvn.oaplatform.org/</url>
        </repository>
    </distributionManagement>

    <properties>
        <revision>5.5.3</revision>

        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>

        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>

        <testng.version>6.11</testng.version>
        <assertj.version>3.12.2</assertj.version>
        <guava.version>27.1-jre</guava.version>
        <logback.version>1.2.3</logback.version>
        <slf4j.version>1.7.21</slf4j.version>
        <httpcomponents.version>4.4.11</httpcomponents.version>
        <apache.commons.text.version>1.6</apache.commons.text.version>
        <compress.version>1.18</compress.version>
        <joda.version>2.10.1</joda.version>
        <metrics.version>4.1.0</metrics.version>
        <jackson.version>2.9.8</jackson.version>
        <lombok.version>1.18.8</lombok.version>
        <reflections.version>0.9.11</reflections.version>
        <jamm.version>0.3.3</jamm.version>
        <springframework.version>2.1.3.RELEASE</springframework.version>
        <gson.version>2.8.5</gson.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:preview</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <argLine>
                        -ea
                        --enable-preview
                        -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-test.xml
                    </argLine>
                    <trimStackTrace>false</trimStackTrace>
                    <!--TODO: remove this ignore once all tests pass
                         For tests dependent on the external services, make the separate profile to run them
                         within a specific environment-->
                    <testFailureIgnore>true</testFailureIgnore>
                    <useFile>true</useFile>
                    <disableXmlReport>false</disableXmlReport>
                    <printSummary>true</printSummary>
                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
                    <!--<forkMode>once</forkMode>-->
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <runOrder>balanced</runOrder>
                    <includes>
                        <include>**/*Test.*</include>
                        <include>**/*TestCase.*</include>
                        <include>**/*Suite.*</include>
                    </includes>
                    <excludedGroups>PERFORMANCE</excludedGroups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.0.1</version>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>PERFORMANCE</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.19.1</version>
                        <configuration>
                            <argLine>
                                -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-perf.xml
                                --enable-preview
                            </argLine>
                            <trimStackTrace>false</trimStackTrace>
                            <testFailureIgnore>true</testFailureIgnore>
                            <useFile>true</useFile>
                            <disableXmlReport>false</disableXmlReport>
                            <printSummary>true</printSummary>
                            <forkedProcessTimeoutInSeconds>9600</forkedProcessTimeoutInSeconds>
                            <forkMode>once</forkMode>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <runOrder>balanced</runOrder>
                            <includes>
                                <include>**/*Performance.*</include>
                            </includes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>3.0.0-M2</version>
                        <executions>
                            <execution>
                                <id>no-duplicate-declared-dependencies</id>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <banDuplicatePomDependencyVersions/>
                                    </rules>
                                </configuration>
                            </execution>
                            <execution>
                                <id>enforce</id>
                                <configuration>
                                    <rules>
                                        <requireUpperBoundDeps />
                                    </rules>
                                </configuration>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
